--- a/communal.html
+++ b/communal.html
@@ -85,10 +85,10 @@
                 <div class="group-title"><span class="badge badge-success">ГАЗ</span></div>
                 <ul>
                   <li>
-                    <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/tariff/gas/" target="_blank">minfin.com.ua</a><span class="opisi">офц.цена.газ</span>
+                    <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/tariff/gas/" target="_blank">minfin.com.ua</a><span class="opisi">офц.ціна.газ</span>
                   </li>
                   <li>
-                    <div class="icon prostobank ua"></div><a href="http://www.prostobank.ua/spravochniki/indikatory_rynka/gas_tariff" target="_blank">prostobank.ua</a><span class="opisi">цена.газ</span>
+                    <div class="icon prostobank ua"></div><a href="http://www.prostobank.ua/spravochniki/indikatory_rynka/gas_tariff" target="_blank">prostobank.ua</a><span class="opisi">ціна.газ</span>
                   </li>
                   <li>
                     <div class="icon naftogazpostach com"></div><a href="https://gas.ua/" target="_blank">naftogaz</a><span class="opisi">Каб.Газ.(!!!)</span>
@@ -105,10 +105,10 @@
                 <div class="group-title"><span class="badge badge-success">Електроенергія</span></div>
                 <ul>
                   <li>
-                    <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com.ua</a><span class="opisi">офц.цена.электр.</span>
+                    <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com.ua</a><span class="opisi">офц.ціна.електр.</span>
                   </li>
                   <li>
-                    <div class="icon prostobank ua"></div><a href="http://www.prostobank.ua/spravochniki/indikatory_rynka/electric_tariff" target="_blank">prostobank.ua</a><span class="opisi">цена.электр.</span>
+                    <div class="icon prostobank ua"></div><a href="http://www.prostobank.ua/spravochniki/indikatory_rynka/electric_tariff" target="_blank">prostobank.ua</a><span class="opisi">ціна.електр.</span>
                   </li>
                   <li>
                     <div class="icon kresc com ua"></div><a href="https://www.kresc.com.ua/" target="_blank">kresc.com.ua</a><span class="opisi">КОЕК</span><a href="https://youtu.be/qIJYbNR_l6g" target="_blank">
@@ -132,7 +132,7 @@
                 <div class="group-title"><span class="badge badge-success">Вода</span></div>
                 <ul>
                   <li>
-                    <div class="icon maanimo com"></div><a href="https://maanimo.com/indexes/140162-tarify-na-vodu-dlya-naseleniya-v-ukraine" target="_blank">maanimo.com</a><span class="opisi">Цена.вода.Укр.</span>
+                    <div class="icon maanimo com"></div><a href="https://maanimo.com/indexes/140162-tarify-na-vodu-dlya-naseleniya-v-ukraine" target="_blank">maanimo.com</a><span class="opisi">ціна.вода.Укр.</span>
                   </li>
                 </ul>
               </div>
@@ -140,7 +140,7 @@
                 <div class="group-title"><span class="badge badge-success">Опалення</span></div>
                 <ul>
                   <li>
-                    <div class="icon maanimo com"></div><a href="https://maanimo.com/indexes/142540-tarify-na-otoplenie-v-ukraine-sezon-2017-2018" target="_blank">maanimo.com</a><span class="opisi">Цена.опал.Укр.</span>
+                    <div class="icon maanimo com"></div><a href="https://maanimo.com/indexes/142540-tarify-na-otoplenie-v-ukraine-sezon-2017-2018" target="_blank">maanimo.com</a><span class="opisi">ціна.опал.Укр.</span>
                   </li>
                 </ul>
               </div>
