--- a/games.html
+++ b/games.html
@@ -55,7 +55,7 @@
                           <li class="nav-item"><a class="nav-link" href="./social.html">Соціум<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./news.html">Новини<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./media.html">Медіа<i></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./games.html">Ігри<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link active" href="./games.html">Ігри<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./communal.html">Комуналка<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./bank.html">Банкінг<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./market.html">Ринок<i></i></a></li>
