--- a/media.html
+++ b/media.html
@@ -54,7 +54,7 @@
                           <li class="nav-item"><a class="nav-link" href="/"><i class="fas fa-home"></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./social.html">Соціум<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./news.html">Новини<i></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./media.html">Медіа<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link active" href="./media.html">Медіа<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./games.html">Ігри<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./communal.html">Комуналка<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./bank.html">Банкінг<i></i></a></li>
@@ -86,7 +86,7 @@
                     </div>
                   </li>
                   <li>
-                    <div class="icon web telegram org"></div><a>Еще музыка:  </a><a href="https://t.me/music_hitok" target="_blank">_music_HitOK_</a><i class="fainfo fab fa-telegram"></i>
+                    <div class="icon web telegram org"></div><a>Ще музика:  </a><a href="https://t.me/music_hitok" target="_blank">_music_HitOK_</a><i class="fainfo fab fa-telegram"></i>
                   </li>
                 </ul>
               </div>
@@ -141,7 +141,7 @@
                     </div>
                   </li>
                   <li>
-                    <div class="icon web telegram org"></div><a>Еще музыка:  </a><a href="https://t.me/music_hitok_ua" target="_blank">_music_HitOK_UA</a><i class="fainfo fab fa-telegram"></i>
+                    <div class="icon web telegram org"></div><a>Ще музика:  </a><a href="https://t.me/music_hitok_ua" target="_blank">_music_HitOK_UA</a><i class="fainfo fab fa-telegram"></i>
                   </li>
                 </ul>
               </div>
@@ -197,7 +197,7 @@
                     </div>
                   </li>
                   <li>
-                    <div class="icon web telegram org"></div><a>Еще музыка:  </a><a href="https://t.me/music_hitok_ru" target="_blank">_music_HitOK_RU</a><i class="fainfo fab fa-telegram"></i>
+                    <div class="icon web telegram org"></div><a>Ще музика:  </a><a href="https://t.me/music_hitok_ru" target="_blank">_music_HitOK_RU</a><i class="fainfo fab fa-telegram"></i>
                   </li>
                 </ul>
               </div>
