--- a/social.html
+++ b/social.html
@@ -52,7 +52,7 @@
           <div class="collapse navbar-collapse text-center" id="navbarCollapse">
             <ul class="nav nav-pills mb-3 navbar-nav">
                           <li class="nav-item"><a class="nav-link" href="/"><i class="fas fa-home"></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./social.html">Соціум<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link active" href="./social.html">Соціум<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./news.html">Новини<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./media.html">Медіа<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./games.html">Ігри<i></i></a></li>
@@ -135,19 +135,6 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Соціальні мережі - россія</span></div>
-                <ul>
-                  <li>
-                    <div class="icon vk com"></div><a href="https://vk.com/" target="_blank">ВКонтакте</a>
-                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon ok ru"></div><a href="https://ok.ru/" target="_blank">Однокласники</a>
-                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
-                  </li>
-                </ul>
-              </div>
-              <div class="group">
                 <div class="group-title"><span class="badge badge-success">Соціальні мережі - Україна</span></div>
                 <ul>
                   <li>
@@ -168,6 +155,19 @@
                   <li>
                     <div class="icon odnogrupniki com ua"></div><a href="https://odnogrupniki.com.ua/reg32138" target="_blank">Odnogrupniki.com.ua`</a>
                   </li>
+                </ul>
+              </div>
+              <div class="group">
+                <div class="group-title"><span class="badge badge-success">Соціальні мережі - россія</span></div>
+                <ul>
+                  <li>
+                    <div class="icon vk com"></div><a href="https://vk.com/" target="_blank">ВКонтакте</a>
+                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon ok ru"></div><a href="https://ok.ru/" target="_blank">Однокласники</a>
+                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
+                  </li>
                   <!-- тут реклама от ГУГЛ - 3 колонки 320+50script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
                   --><ins class="adsbygoogle" style="display:inline-block;width:320px;height:50px" data-ad-client="ca-pub-3065705668384801" data-ad-slot="5338066053"></ins>
                   <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
@@ -177,7 +177,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Електронна пошта - Зарубіж</span></div>
+                <div class="group-title"><span class="badge badge-success">Електронні скриньки - Зарубіж</span></div>
                 <ul>
                   <li>
                     <div class="icon gmail"></div><a href="https://mail.google.com" target="_blank">gmail</a>
@@ -194,23 +194,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Електронна пошта - росія</span></div>
-                <ul>
-                  <li>
-                    <div class="icon mail yandex ua"></div><a href="https://mail.yandex.ua/" target="_blank">mail.yandex.ua</a>
-                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon e mail ru"></div><a href="https://e.mail.ru/login" target="_blank">e.mail.ru</a>
-                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon mail rambler ru"></div><a href="https://mail.rambler.ru/" target="_blank">mail.rambler.ru</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="group">
-                <div class="group-title"><span class="badge badge-success">Електронна пошта - Україна</span></div>
+                <div class="group-title"><span class="badge badge-success">Електронні скриньки - Україна</span></div>
                 <ul>
                   <li>
                     <div class="icon mail ukr net"></div><a href="https://accounts.ukr.net/login" target="_blank">mail.ukr.net</a>
@@ -232,6 +216,22 @@
                   </li>
                   <li>
                     <div class="icon mail ex ua"></div><a href="https://mail.ex.ua/" target="_blank">mail.ex.ua</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="group">
+                <div class="group-title"><span class="badge badge-success">Електронні скриньки - росія</span></div>
+                <ul>
+                  <li>
+                    <div class="icon mail yandex ua"></div><a href="https://mail.yandex.ua/" target="_blank">mail.yandex.ua</a>
+                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon e mail ru"></div><a href="https://e.mail.ru/login" target="_blank">e.mail.ru</a>
+                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon mail rambler ru"></div><a href="https://mail.rambler.ru/" target="_blank">mail.rambler.ru</a>
                   </li>
                   <!-- тут реклама от ГУГЛ - 3 колонки 320+50script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
                   --><ins class="adsbygoogle" style="display:inline-block;width:320px;height:50px" data-ad-client="ca-pub-3065705668384801" data-ad-slot="5338066053"></ins>
