--- a/bank.html
+++ b/bank.html
@@ -57,7 +57,7 @@
                           <li class="nav-item"><a class="nav-link" href="./media.html">Медіа<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./games.html">Ігри<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./communal.html">Комуналка<i></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./bank.html">Банкінг<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link active" href="./bank.html">Банкінг<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./market.html">Ринок<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./shops.html">Магазини<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./others.html">Інше<i></i></a></li>
