--- a/market.html
+++ b/market.html
@@ -58,7 +58,7 @@
                           <li class="nav-item"><a class="nav-link" href="./games.html">Ігри<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./communal.html">Комуналка<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./bank.html">Банкінг<i></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./market.html">Ринок<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link active" href="./market.html">Ринок<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./shops.html">Магазини<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./others.html">Інше<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./city.html">Городок<i></i></a></li>
