--- a/news.html
+++ b/news.html
@@ -53,7 +53,7 @@
             <ul class="nav nav-pills mb-3 navbar-nav">
                           <li class="nav-item"><a class="nav-link" href="/"><i class="fas fa-home"></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./social.html">Соціум<i></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./news.html">Новини<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link active" href="./news.html">Новини<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./media.html">Медіа<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./games.html">Ігри<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./communal.html">Комуналка<i></i></a></li>
