--- a/others.html
+++ b/others.html
@@ -60,7 +60,7 @@
                           <li class="nav-item"><a class="nav-link" href="./bank.html">Банкінг<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./market.html">Ринок<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./shops.html">Магазини<i></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./others.html">Інше<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link active" href="./others.html">Інше<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./city.html">Городок<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./programs.html"><i class="fas fa-microchip"></i></a></li>
             </ul>
