--- a/media.html
+++ b/media.html
@@ -78,12 +78,7 @@
                 <ul>
                   <li>
                     <!-- тут код плеера-->
-                    <div id="player_zap" style="height:60px;width:240px">
-                      <script>
-                        var player_zap = new Playerjs({id:"player_zap", file:"https://zakladki.github.io/playlist1zap.txt"});
-                        
-                      </script>
-                    </div>
+                    <iframe width="560" height="315" src="https://www.youtube.com/playlist?list=PLkF1vM_kexQA-dC1jsQfgM8VFHdWabcGl" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                   </li>
                   <li>
                     <div class="icon web telegram org"></div><a>Ще музика:  </a><a href="https://t.me/music_hitok" target="_blank">_music_HitOK_</a><i class="fainfo fab fa-telegram"></i>
