--- a/media.html
+++ b/media.html
@@ -175,7 +175,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Плеєр.ТОП.РУСЬКА (playlist.2020.01)</span></div>
+                <div class="group-title"><span class="badge badge-warning">Плеєр.ТОП.УКРАЇНСЬКА (playlist.2025.01)</span></div>
                 <ul>
                   <li>
                     <!-- тут код плеера-->
