--- a/media.html
+++ b/media.html
@@ -78,7 +78,7 @@
                 <ul>
                   <li>
                     <!-- тут код плеера-->
-                    <iframe width="240" height="60" src="https://www.youtube.com/playlist?list=PLkF1vM_kexQA-dC1jsQfgM8VFHdWabcGl" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                    <iframe width="240" height="60" src="https://www.youtube.com/embed/videoseries?list=PLkF1vM_kexQA-dC1jsQfgM8VFHdWabcGl" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                   </li>
                   <li>
                     <div class="icon web telegram org"></div><a>Ще музика:  </a><a href="https://t.me/music_hitok" target="_blank">_music_HitOK_</a><i class="fainfo fab fa-telegram"></i>
@@ -128,7 +128,7 @@
                 <ul>
                   <li>
                     <!-- тут код плеера-->
-                    <iframe width="240" height="60" src="https://www.youtube.com/playlist?list=PLkF1vM_kexQA-dC1jsQfgM8VFHdWabcGl" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                    <iframe width="240" height="60" src="https://www.youtube.com/embed/videoseries?list=PLkF1vM_kexQA-dC1jsQfgM8VFHdWabcGl" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                   </li>
                   <li>
                     <div class="icon web telegram org"></div><a>Ще музика:  </a><a href="https://t.me/music_hitok_ua" target="_blank">_music_HitOK_UA</a><i class="fainfo fab fa-telegram"></i>
@@ -179,7 +179,7 @@
                 <ul>
                   <li>
                     <!-- тут код плеера-->
-                    <iframe width="240" height="60" src="https://www.youtube.com/playlist?list=PLkF1vM_kexQA-dC1jsQfgM8VFHdWabcGl" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                    <iframe width="240" height="60" src="https://www.youtube.com/embed/videoseries?list=PLkF1vM_kexQA-dC1jsQfgM8VFHdWabcGl" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                   </li>
                   <li>
                     <div class="icon web telegram org"></div><a>Ще музика:  </a><a href="https://t.me/music_hitok_ru" target="_blank">_music_HitOK_RU</a><i class="fainfo fab fa-telegram"></i>
