--- a/media.html
+++ b/media.html
@@ -74,11 +74,11 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Плеєр.ТОП.ЗАКОРДОН (playlist.2020.01)</span></div>
+                <div class="group-title"><span class="badge badge-warning">Плеєр.ТОП.УКРАЇНСЬКА (playlist.2025.01)</span></div>
                 <ul>
                   <li>
                     <!-- тут код плеера-->
-                    <iframe width="240" height="135" src="https://www.youtube.com/embed/videoseries?list=PLkF1vM_kexQA-dC1jsQfgM8VFHdWabcGl" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                    <iframe width="240" height="135" src="https://www.youtube.com/embed/videoseries?list=PLCbt8rNMaiwHl9brI0ggRrnvir9q8kSmA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                   </li>
                   <li>
                     <div class="icon web telegram org"></div><a>Ще музика:  </a><a href="https://t.me/music_hitok" target="_blank">_music_HitOK_</a><i class="fainfo fab fa-telegram"></i>
@@ -124,11 +124,11 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Плеєр.ТОП.УКРАЇНСЬКА (playlist.2020.01)</span></div>
+                <div class="group-title"><span class="badge badge-warning">Плеєр.ТОП.ПАТРІОТИЧНІ (playlist.2025.01)</span></div>
                 <ul>
                   <li>
                     <!-- тут код плеера-->
-                    <iframe width="240" height="135" src="https://www.youtube.com/embed/videoseries?list=PLkF1vM_kexQA-dC1jsQfgM8VFHdWabcGl" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                    <iframe width="240" height="135" src="https://www.youtube.com/embed/videoseries?list=PLCbt8rNMaiwH0crotsDppzWMkODGmAl2n" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                   </li>
                   <li>
                     <div class="icon web telegram org"></div><a>Ще музика:  </a><a href="https://t.me/music_hitok_ua" target="_blank">_music_HitOK_UA</a><i class="fainfo fab fa-telegram"></i>
@@ -175,7 +175,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Плеєр.ТОП.УКРАЇНСЬКА (playlist.2025.01)</span></div>
+                <div class="group-title"><span class="badge badge-warning">Плеєр.ТОП.ІНШІ (playlist.2025.01)</span></div>
                 <ul>
                   <li>
                     <!-- тут код плеера-->
