--- a/media.html
+++ b/media.html
@@ -81,7 +81,7 @@
                     <iframe width="320" height="180" src="https://www.youtube.com/embed/videoseries?list=PLCbt8rNMaiwHl9brI0ggRrnvir9q8kSmA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                   </li>
                   <li>
-                    <div class="icon web telegram org"></div><a>Ще музика:  </a><a href="https://t.me/music_hitok" target="_blank">_music_HitOK_</a><i class="fainfo fab fa-telegram"></i>
+                    <div class="icon web telegram org"></div><a>Ще музика:  </a><a href="https://t.me/music_hitok_ua" target="_blank">_music_HitOK_UA</a><i class="fainfo fab fa-telegram"></i>
                   </li>
                 </ul>
               </div>
@@ -182,7 +182,7 @@
                     <iframe width="320" height="180" src="https://www.youtube.com/embed/videoseries?list=PLkF1vM_kexQA-dC1jsQfgM8VFHdWabcGl" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                   </li>
                   <li>
-                    <div class="icon web telegram org"></div><a>Ще музика:  </a><a href="https://t.me/music_hitok_ru" target="_blank">_music_HitOK_RU</a><i class="fainfo fab fa-telegram"></i>
+                    <div class="icon web telegram org"></div><a>Ще музика:  </a><a href="https://t.me/websis_music" target="_blank">_music_WebSIS_</a><i class="fainfo fab fa-telegram"></i>
                   </li>
                 </ul>
               </div>
