Поправки до ссилки

--- a/media.html
+++ b/media.html
@@ -179,7 +179,7 @@
                 <ul>
                   <li>
                     <!-- тут код плеера-->
-                    <iframe width="320" height="180" src="https://www.youtube.com/embed/videoseries?list=PLkF1vM_kexQCgisbwlVnGa4zdE4gtMNxD&amp;si=WF9M8NeoG6MTAZ-n" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                    <iframe width="320" height="180" src="https://www.youtube.com/embed/videoseries?list=PLkF1vM_kexQCgisbwlVnGa4zdE4gtMNxD" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                   </li>
                   <li>
                     <div class="icon web telegram org"></div><a>Ще музика:  </a><a href="https://t.me/websis_music" target="_blank">_music_WebSIS_</a><i class="fainfo fab fa-telegram"></i>
