--- a/games.html
+++ b/games.html
@@ -221,7 +221,10 @@
             <div class="kolobok">
               <ul class="share-buttons">
                 <!-- AddToAny BEGIN-->
-                <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-url="https://zakladki.github.io" data-a2a-title="Топ Закладки"><a class="a2a_dd" href="https://www.addtoany.com/share"></a><a class="a2a_button_facebook"></a><a class="a2a_button_vk"></a><a class="a2a_button_odnoklassniki"></a><a class="a2a_button_telegram"></a><a class="a2a_button_viber"></a><a class="a2a_button_skype"></a></div>
+                <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-url="https://zakladki.github.io" data-a2a-title="Топ Закладки"><a class="a2a_dd" href="https://www.addtoany.com/share"></a><a class="a2a_button_facebook"></a>
+                  <!-- a.a2a_button_vk-->
+                  <!-- a.a2a_button_odnoklassniki--><a class="a2a_button_telegram"></a><a class="a2a_button_viber"></a><a class="a2a_button_skype"></a>
+                </div>
                 <script>
                   var a2a_config = a2a_config || {};
                   a2a_config.onclick = 1;
