--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <div class="icon naftogazpostach com"></div><a href="https://gas.ua/" target="_blank">naftogaz</a><span class="opisi">Кабін.Газ.2019</span>
                   </li>
                   <li>
-                    <div class="icon gasolina-online com"></div><a href="https://gasolina-online.com/" target="_blank">gasolina</a><span class="opisi">Каб.Газ.(доставка)</span>
+                    <div class="icon gasolina-online com"></div><a href="https://gasolina-online.com/" target="_blank">Gasolina</a><span class="opisi">Каб.Газ.(доставка)</span>
                   </li>
                   <li>
                     <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com</a><span class="opisi">оф.ціна.електр.</span>
